Fix product item layout issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -513,7 +513,7 @@ main {
     padding: 0 1rem;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-    grid-auto-rows: 30rem;
+    grid-auto-rows: 32rem;
     gap: 2rem;
     width: 100%;
     max-width: var(--content-max-width);
@@ -530,6 +530,12 @@ main {
     border-radius: 2rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     transition: all .5s ease;
+}
+
+.producten-item .prijs-per-dag {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .producten-item.spacer {
@@ -707,7 +713,7 @@ a h1.producten-item {
     }
 
     .slider-container {
-        padding: 2px 0;
+        padding: 0;
         margin: 0;
     }
 }
